colang-cli/tests/samples/features/return/good/without_value.co
fun foo(x: int) {
  if (x == 4) {
    return;
  }

  assert(false);
}

fun main() {
  foo(4);
}
