colang-cli/tests/samples/features/return/compile_error/return_no_value_from_non_void_fun.co
fun foo(x: int): string {
  if (x == 4) {
    return;
  }

  "not four"
}

fun main() {
  foo(4);
}
